--- a/middleware/package.json
+++ b/middleware/package.json
@@ -9,6 +9,7 @@
   "author": "kellen",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "nodemon": "^2.0.22"
   }
 }
