--- a/custom_axios/package.json
+++ b/custom_axios/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "axios": "^1.3.6",
-    "vue": "^3.2.47"
+    "element-ui": "^2.15.13",
+    "vue": "^3.2.47",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
